# CvxBasedAgentOrchestration

./: .gitignore  README.md  agents_available.json  agents_small.json  pyproject.toml  pytest.ini
bench_runs_estimates/20260221-141355-1160724/: bench_config.json  report.json
bench_runs_estimates2/20260221-141412-1161696/: bench_config.json  report.json
bench_runs_orch_test/20260221-132340-1052250/: bench_config.json  report.json
bench_runs_orch_test/20260221-132342-1052392/: bench_config.json  report.json
bench_runs_refactor/20260221-141101-1150703/: bench_config.json  report.json
bench_runs_verify/20260221-140654-1136797/: bench_config.json  report.json
configs/: agents_auto_fast_k2.json  agents_auto_fast_local.json  agents_fast.json  agents_heavy.json  agents_pair_phi4_gemma2.json  agents_single_gemma2.json  agents_single_phi4.json
data_analysis/: README.md  analyze_latest.py
experiments/: PRESENTATION.md
experiments/exp2_vram_48/20260221-235849-12139/: report.csv  (+3 more)
runs/20260226-000113_full_sweep/: meta_report.json
scripts/: enable_commit_experiments.py  run_experiments.sh  run_full_sweep.py  setup.sh
src/swarm/: __init__.py  agent_registry.py  agents.py  bench_runner.py  estimator.py  evaluator.py  executor.py  experiment_runner.py  gpu.py  main.py  model_manager.py  mtbench_judge.py  ollama_client.py  optimizer.py  orchestrator.py  planner_router.py  pref_router.py  presets.py  reporting.py  routing.py  task_graph.py  tasks.py  telemetry.py
tests/: test_sanity.py
tests/benchmarks/: test_mmlu.py
tests/mtbench/: test_pairwise_judge_parsing.py
tests/router_training/: test_preference_data_io.py  test_threshold_router.py  test_train_tfidf_logreg.py
(+282 files in other folders)
